cloudformation-day-6/output/Componentization/security-groups/security-groups.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: this template provisions the webserver and template security grooups
Metadata: {}

Parameters: 
  DevWebserverSGGN:
    Description: Please provide your DevWebserver group name
    Type: String
    Default: DevWebserverSGGN

  DevWebserverSGGD:
    Description: Please provide the SG group description
    Type: String
    Default: enabling SSH and HTTP

  DevDBserverSGGN:
    Description: Please provide your DevDBserver group name
    Type: String
    Default: DevDBserverSGGN

  DevDBserverSGGD:
    Description: Please provide the SG group description
    Type: String
    Default: enabling MySql



Mappings: {}

Conditions: {}

Resources:
  #Webserver SG
  DevWebserverSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref DevWebserverSGGN
      GroupDescription: !Ref DevWebserverSGGD
      VpcId: !ImportValue DevVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: DevWebserverSG
  #Database SG
  DevDBserverSG: 
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Ref DevDBserverSGGN
      GroupDescription: !Ref DevDBserverSGGD
      VpcId: !ImportValue DevVPCID  #Import DevVPC ID exported name
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: DevDBserverSG


Outputs: 
  DevWebserverSGIDExportOutput:
    Description: Exporting DevWebserver security group ID
    Value: !Ref DevWebserverSG
    Export: 
      Name: DevWebserverSGID
